--- a/pages/index.html
+++ b/pages/index.html
@@ -11,11 +11,11 @@
         <h2>Login</h2>
         <form id="login-form">
             <label for="username">Username</label>
-            <input type="text" id="username" name="username" required>
+            <input type="text" id="username" name="username">
             <label for="password">Password</label>
-            <input type="password" id="password" name="password" required>
+            <input type="password" id="password" name="password" >
             <p id="error-message" class="error"></p>
-            <button type="submit">Login</button>
+            <button id="login-btn" type="submit">Login</button>
         </form>
     </div>
 
